Fix shopping cart page (#84)
Handle function of checkout page
Update and fix code of shopping cart page