@@ -3,6 +3,7 @@ package dao;
 import models.Product;
 import models.Size;
 
+import java.sql.SQLException;
 import java.util.List;
 
 public class SizeDAO {
@@ -54,7 +55,7 @@ public class SizeDAO {
 
     public void deleteSizeList(List<Integer> listId) {
         StringBuilder idRange = new StringBuilder();
-        if (listId.size() == 1) idRange.append(listId.getFirst());
+        if (listId.size() == 1) idRange.append(listId.get(0));
         else
             for (int i = 0; i < listId.size(); i++) {
                 idRange.append(listId.get(i));
